| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8142723 | emb-9 | Gerard Ziemski | P2 | Resolved | Fixed | team |
- backported by
-
JDK-8142723 Runtime: implement ranges (optionally constraints) for those flags that have them missing
-
- Resolved
-
- duplicates
-
JDK-8374609 SIGSEGV in libc.so.6 when -XX:PerfMaxStringConstLength is set to large value
-
- Closed
-
-
JDK-8134396 Check upper limit of flags setting numbers of stack protection pages.
-
- Closed
-
-
JDK-8037503 Internal symbol table size should be limited in size
-
- Closed
-
- relates to
-
JDK-8136766 Enable ThreadStackSize range test
-
- Resolved
-
-
JDK-8154379 MIN_STACK_SHADOW_PAGES should equal DEFAULT_STACK_SHADOW_PAGES on aarch64
-
- Resolved
-
-
JDK-8140582 aarch64: jvm fails to initialise after 8078556
-
- Resolved
-
-
JDK-8138983 Runtime: implement ranges for Shared*** flags
-
- Closed
-
-
JDK-8350464 The flags to set the native priority for the VMThread and Java threads need a broader range
-
- Resolved
-
-
JDK-8059557 JEP 245: Validate JVM Command-Line Flag Arguments
-
- Closed
-
-
JDK-8138913 [TESTBUG] hotspot/test/runtime/CommandLine/TestHexArguments.java should not hardcode SharedBaseAddress value
-
- Closed
-
-
JDK-8139864 Improve handling of stack protection zones.
-
- Resolved
-
-
JDK-8133564 Runtime - 2nd followup to Validate JVM Command-Line Flag Arguments
-
- Resolved
-
-
JDK-8141641 Runtime: implement range for ErrorLogTimeout
-
- Resolved
-
-
JDK-8202150 [REDO] Split globals.hpp to factor out the Flag class
-
- Resolved
-
-
JDK-8133565 GC - 2nd followup to JDK-8059557
-
- Resolved
-
-
JDK-8134691 CommandLineFlagConstraint::AtParse is not useful and not what we need
-
- Closed
-
-
JDK-8081519 Split globals.hpp to factor out the Flag class
-
- Closed
-
-
JDK-8085866 There are 99 uses of FLAG_SET_ERGO, should they check the return value?
-
- Closed
-