8078556: Runtime: implement ranges (optionally constraints) for those flags that have them missing

JEP 245: implement ranges and constraints for runtime flags.

Co-authored-by: Goetz Lindenmaier <goetz.lindenmaier@sap.com>
Reviewed-by: coleenp, ddmitriev, jiangli, goetz